--- a/style.css
+++ b/style.css
@@ -333,8 +333,14 @@ body{
 }
 
 @media only screen and (max-width: 1200px) {
+
+    .turnactiontypeslot{
+        margin-left: 0em;
+    }
+
     .turnactiontype{
-        margin-left: 0;
+        margin-left: 50%;
+        transform: translate(-50%, 0%)
     }
 }
 
@@ -383,6 +389,8 @@ body{
         height: 1.5em;
         width: 1.5em;
         flex-flow: row;
+        margin-top: 0.2em;
+        margin-bottom: 0.2em;
     }
 }
 
